[tool.poetry]
name = "correctedcalendar"
version = "0.1.0"
description = ""
authors = ["Jason Baldus <jason.baldus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
